# Menga

./: README.md  install_redBPF.sh  install_tools_cpu.sh  menga.py  menga_start_Profilecpu.sh  ui.py
cpu-analysis/: menga_start_Profilecpu.sh
docker-test/: Dockerfile  script.sh
gui/: ui.py
menga-cmdline/: network_sensor.py
menga_cmdline/: cpu_sensor.py  docker_launch.py  elastic_send.py  generate_report.py  network_sensor.py  sensor.py  sensors_launch.py  template-menga.docx
network-analysis/: Cargo.toml
network-analysis/bcc/: save.py  tcpconnect.py
network-analysis/redbpf-network/: Cargo.toml
network-analysis/redbpf-network/probes/: Cargo.toml
network-analysis/redbpf-network/probes/src/: lib.rs
network-analysis/redbpf-network/probes/src/tcpconnect/: main.rs
network-analysis/tcpv4_tracing/firewall-probes/: Cargo.toml
network-analysis/tcpv4_tracing/firewall-probes/src/: lib.rs
network-analysis/tcpv4_tracing/firewall-probes/src/block_rules/: main.rs  mod.rs
network-analysis/tcpv4_tracing/firewall-userspace/: Cargo.toml  build.rs
network-analysis/tcpv4_tracing/firewall-userspace/examples/: block_rules.rs
processes-analysis/bcc/: opensnoop.py
processes-analysis/redbpf-processes/: Cargo.toml
processes-analysis/redbpf-processes/probes/: Cargo.toml
processes-analysis/redbpf-processes/probes/src/openmonitor/: main.rs  mod.rs
