[package]
name = "firewall-probes"
version = "0.1.0"
edition = '2018'

[build-dependencies]
cargo-bpf = { version = "2.2.0", default-features = false, features = ["bindings"] }

[dependencies]
cty = "0.2"
redbpf-macros = "2.2.0"
redbpf-probes = "2.2.0"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "block_rules"
path = "src/block_rules/main.rs"
required-features = ["probes"]

